--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="./manifest.json">
-    <meta name="theme-color" content="#000000">
-    <title>Vite + React</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>PWA Juanito</title>
+
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/assets/img/icon3.png" />
+    <meta name="theme-color" content="#3f87a6" />
   </head>
   <body>
     <div id="root"></div>
